--- a/content/graph/chapter.tex
+++ b/content/graph/chapter.tex
@@ -6,10 +6,10 @@
 	\kactlimport{TopoSort.h}
 
 \section{Network flow}
-	\kactlimport{PushRelabel.h}
+	% \kactlimport{PushRelabel.h}
 	\kactlimport{MinCostMaxFlow.h}
-	\kactlimport{EdmondsKarp.h}
-	% \kactlimport{Dinic.h}
+	% \kactlimport{EdmondsKarp.h}
+	\kactlimport{Dinic.h}
 	\kactlimport{MinCut.h}
 	\kactlimport{GlobalMinCut.h}
 	\kactlimport{GomoryHu.h}
