--- a/content/numerical/chapter.tex
+++ b/content/numerical/chapter.tex
@@ -29,3 +29,4 @@
 	\kactlimport{FastFourierTransformMod.h}
 	\kactlimport{NumberTheoreticTransform.h}
 	\kactlimport{FastSubsetTransform.h}
+  \kactlimport{MaxPlusConvolution.h}
