--- a/content/geometry/chapter.tex
+++ b/content/geometry/chapter.tex
@@ -25,6 +25,7 @@
 	\kactlimport{PolygonArea.h}
 	\kactlimport{PolygonCenter.h}
 	\kactlimport{PolygonCut.h}
+	\kactlimport{PolygonUnion.h}
 	\kactlimport{HalfPlane.h}
 	\kactlimport{ConvexHull.h}
 	\kactlimport{HullDiameter.h}
