Update team name for 2025

--- a/content/kactl.tex
+++ b/content/kactl.tex
@@ -3,7 +3,7 @@
 \kactlcontentdir{content}
 
 \university{UofT A}{University of Toronto}{uoft}
-\team{UofT A}{Andrew Kwok, Justin Matthew Wong, Robert Chung}
+\team{UofT A}{Andrew Tam, Lufeng Cheng, Robert Chung}
 % \contest{ACM-ICPC World Finals 2017}{May 24, 2017}
 \contest{\ }{\today}
 % \enablecolors
