Add Bitset.h cheat sheet

--- a/content/data-structures/chapter.tex
+++ b/content/data-structures/chapter.tex
@@ -1,5 +1,6 @@
 \section{Data structures}
 
+\kactlimport{Bitset.h}
 \kactlimport{OrderStatisticTree.h}
 \kactlimport{HashMap.h}
 \kactlimport{SegmentTree.h}
