Add stress test template

--- a/content/various/chapter.tex
+++ b/content/various/chapter.tex
@@ -44,3 +44,5 @@
 	\kactlimport{BumpAllocatorSTL.h}
 	% \kactlimport{Unrolling.h}
 	% \kactlimport{SIMD.h}
+	\kactlimport{UniformRandom.h}
+	\kactlimport[-l sh]{StressTest.sh}
