Update kactl.pdf for Jan 21

--- a/content/kactl.tex
+++ b/content/kactl.tex
@@ -2,8 +2,8 @@
 \usepackage{kactlpkg}
 \kactlcontentdir{content}
 
-\university{UofT A}{University of Toronto}{uoft}
-\team{UofT A}{Andrew Tam, Lufeng Cheng, Robert Chung}
+\university{UofT B}{University of Toronto}{uoft}
+\team{UofT B}{Aditya Bandekar, Bill Lin, Robert Chung}
 % \contest{ACM-ICPC World Finals 2017}{May 24, 2017}
 \contest{\ }{\today}
 % \enablecolors
