--- a/content/appendix/chapter.tex
+++ b/content/appendix/chapter.tex
@@ -1,4 +1,4 @@
-\appendix
-\section{Techniques}
+% \appendix
+% \section{Techniques}
 
-\kactlimport[-l raw]{techniques.txt}
+% \kactlimport[-l raw]{techniques.txt}
