--- a/content/data-structures/chapter.tex
+++ b/content/data-structures/chapter.tex
@@ -1,13 +1,13 @@
 \section{Data structures}
 
-\kactlimport{Bitset.h}
+% \kactlimport{Bitset.h}
 \kactlimport{OrderStatisticTree.h}
 \kactlimport{HashMap.h}
 \kactlimport{SegmentTree.h}
-% \kactlimport{LazySegmentTree.h}
+\kactlimport{LazySegmentTree.h}
 % \kactlimport{UnionFind.h}
 \kactlimport{UnionFindRollback.h}
-\kactlimport{SubMatrix.h}
+% \kactlimport{SubMatrix.h}
 \kactlimport{Matrix.h}
 \kactlimport{LineContainer.h}
 \kactlimport{Treap.h}
