--- a/content/various/chapter.tex
+++ b/content/various/chapter.tex
@@ -31,11 +31,11 @@
 			\item \verb@c = x&-x, r = x+c; (((r^x) >> 2)/c) | r@ is the next number after \texttt{x} with the same number of bits set.
 			\item \verb@rep(b,0,K) rep(i,0,(1 << K))@ \\ \verb@  if (i & 1 << b) D[i] += D[i^(1 << b)];@ computes all sums of subsets.
 		\end{itemize}
-	\subsubsection{Pragmas}
+	\subsubsection{Pragmas for bitset (put before bits/stdc++.h)}
 		\begin{itemize}
-			\item \lstinline{#pragma GCC optimize ("Ofast")} will make GCC auto-vectorize loops and optimizes floating points better.
-			\item \lstinline{#pragma GCC target ("avx2")} can double performance of vectorized code, but causes crashes on old machines.
-			% \item \lstinline{#pragma GCC optimize ("trapv")} kills the program on integer overflows (but is really slow).
+			\item \lstinline{#pragma GCC optimize("O3,unroll-loops")}
+			\item \lstinline{#include <bits/allocator.h>}
+			\item \lstinline{#pragma GCC target("avx2,bmi,bmi2,popcnt,lzcnt")}
 		\end{itemize}
 	\kactlimport{FastMod.h}
 	\kactlimport{FastInput.h}
